# rust-from-go

./: Cargo.toml  Makefile  go.mod  main.go
src/: bridge.h  gate.go  lib.rs
test/00-all-ports/: PortModules.sv  TopModule.sv
